exports[`test renders disabled tags 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft-double-sides@lap-wide-and-up">
    <div
      className="soft-half soft-double-ends push-double@lap-and-up soft@lap-wide-and-up text-center">
      <h3
        className="flush-bottom">
        Find My People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom@anchored">
        <em>
          Select multiple tags to find even more groups
        </em>
      </h6>
      <div
        className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored">
        <withRouter(Connect(TagWithoutData))
          className=""
          onClick={[Function]}
          val="test" />
        <withRouter(Connect(TagWithoutData))
          className=""
          onClick={[Function]}
          val="test" />
      </div>
      <button
        className="btn push-top@lap-and-up btn--disabled"
        disabled={true}
        onClick={[Function]}>
        Let\'s Go!
      </button>
    </div>
  </div>
  <div
    className="soft-sides soft-double-sides@lap-and-up background--light-primary">
    <div
      className="soft@lap-and-up">
      <hr
        className="flush outlined--light"
        style={
          Object {
            "borderWidth": "1px",
          }
        } />
    </div>
  </div>
  <div
    className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
    <div>
      <h3
        className="soft-ends@anchored push-top@lap-and-up flush-bottom">
        Don\'t see what you\'re looking for?
      </h3>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Input
          classes={
            Array [
              "hard-bottom",
            ]
          }
          hideLabel={true}
          name="search"
          onChange={[Function]}
          placeholder="Type your search here..."
          type="text" />
        <div
          className="one-whole text-center@handheld text-left@lap-and-up">
          <h6>
            <em>
              Find a group by zipcode, name, campus, or description
            </em>
          </h6>
        </div>
      </Form>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;

exports[`test renders loading if no tags 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft-double-sides@lap-wide-and-up">
    <div
      className="soft-half soft-double-ends push-double@lap-and-up soft@lap-wide-and-up text-center">
      <h3
        className="flush-bottom">
        Find My People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom@anchored">
        <em>
          Select multiple tags to find even more groups
        </em>
      </h6>
      <div
        className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored" />
      <div
        className="one-whole text-center">
        <Loading />
      </div>
    </div>
  </div>
  <div
    className="soft-sides soft-double-sides@lap-and-up background--light-primary">
    <div
      className="soft@lap-and-up">
      <hr
        className="flush outlined--light"
        style={
          Object {
            "borderWidth": "1px",
          }
        } />
    </div>
  </div>
  <div
    className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
    <div>
      <h3
        className="soft-ends@anchored push-top@lap-and-up flush-bottom">
        Don\'t see what you\'re looking for?
      </h3>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Input
          classes={
            Array [
              "hard-bottom",
            ]
          }
          hideLabel={true}
          name="search"
          onChange={[Function]}
          placeholder="Type your search here..."
          type="text" />
        <div
          className="one-whole text-center@handheld text-left@lap-and-up">
          <h6>
            <em>
              Find a group by zipcode, name, campus, or description
            </em>
          </h6>
        </div>
      </Form>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;

exports[`test renders with props 1`] = `
<section
  className="background--light-secondary hard">
  <Meta
    description="Who are your people? We know it\'s important to be connected, but it\'s hard to build lasting friendships. What if taking one simple step changed everything? At NewSpring, we’re trying to make it easier for you to find people who share your interests. We know that when you get together with people and have fun, you’ll begin to grow into a strong community that serves and grows together. What if you are one step away from saying, “These are my people”?"
    image="https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/groups/groups.2x1_2000_1000_90_a789ae07aae81961.jpg"
    title="Group Finder" />
  <Apollo(Component) />
  <div
    className="background--light-primary soft-double-sides@lap-wide-and-up">
    <div
      className="soft-half soft-double-ends push-double@lap-and-up soft@lap-wide-and-up text-center">
      <h3
        className="flush-bottom">
        Find My People
      </h3>
      <h6
        className="soft-half-bottom@handheld soft-bottom@anchored">
        <em>
          Select multiple tags to find even more groups
        </em>
      </h6>
      <div
        className="push-ends soft-double-sides@lap-and-up push-double-sides@anchored">
        <withRouter(Connect(TagWithoutData))
          className=""
          onClick={[Function]}
          val="test" />
        <withRouter(Connect(TagWithoutData))
          className=""
          onClick={[Function]}
          val="test" />
      </div>
      <button
        className="btn push-top@lap-and-up"
        disabled={false}
        onClick={[Function]}>
        Let\'s Go!
      </button>
    </div>
  </div>
  <div
    className="soft-sides soft-double-sides@lap-and-up background--light-primary">
    <div
      className="soft@lap-and-up">
      <hr
        className="flush outlined--light"
        style={
          Object {
            "borderWidth": "1px",
          }
        } />
    </div>
  </div>
  <div
    className="soft soft-double-ends soft-double@lap-and-up text-center background--light-primary">
    <div>
      <h3
        className="soft-ends@anchored push-top@lap-and-up flush-bottom">
        Don\'t see what you\'re looking for?
      </h3>
      <Form
        action={true}
        classes={
          Array [
            "soft",
            "one-whole",
            "two-thirds@portable",
            "one-half@anchored",
            "display-inline-block",
            "push-bottom",
          ]
        }
        submit={[Function]}>
        <Input
          classes={
            Array [
              "hard-bottom",
            ]
          }
          hideLabel={true}
          name="search"
          onChange={[Function]}
          placeholder="Type your search here..."
          type="text" />
        <div
          className="one-whole text-center@handheld text-left@lap-and-up">
          <h6>
            <em>
              Find a group by zipcode, name, campus, or description
            </em>
          </h6>
        </div>
      </Form>
    </div>
  </div>
  <div
    className="soft-half soft-sides@palm-wide-and-up soft-double-ends soft-double@lap-wide-and-up text-center">
    <h3
      className="push-top">
      You Can\'t Do Life Alone
    </h3>
    <div
      className="grid">
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
      <div
        className="grid__item one-whole one-half@palm-wide-and-up">
        <Connect(Apollo(LikesWrapper))
          item={Object {}} />
      </div>
    </div>
  </div>
</section>
`;
